@@ -413,6 +413,8 @@ static void process_commands(struct tgdb *tgdb)
             default:
                 break;
         }
+
+        tgdb_types_free_command ( (void*) item );
     }
 }
 
